feat(header): add main header

--- a/assets/styles/blocks/header.css
+++ b/assets/styles/blocks/header.css
@@ -1,3 +1,34 @@
-header {
-  background: #000;
+.main-header {
+  padding: 15px 0;
+
+  background: var(--main-color);
+}
+
+.wrapper {
+  width: 100%;
+  padding: 0 30px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.main-nav {
+  display: flex;
+  margin-right: auto;
+}
+
+.logo,
+.phone,
+.main-btn {
+  margin-right: 15px;
+}
+
+.languages {
+  color: #fff;
+}
+
+.main-nav .main-nav-link {
+  padding: 10px;
 }
