--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,6 +1,20 @@
 @import url(./variables.css);
+@import url(./general/button.css);
 @import url(./blocks/header.css);
 
 * {
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+
+  cursor: pointer;
+
+  transition: 200ms;
+}
+
+a:hover {
+  color: #ccc;
 }
