--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Noto Sans", sans-serif;
+}
+
 a {
   text-decoration: none;
   color: #fff;
