--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,6 +2,7 @@
 @import url(./general/button.css);
 @import url(./blocks/header.css);
 @import url(./blocks/footer.css);
+@import url(./blocks/conflict.css);
 
 * {
   box-sizing: border-box;
