fix: positioning header and video background

--- a/assets/styles/blocks/hat.css
+++ b/assets/styles/blocks/hat.css
@@ -36,7 +36,7 @@ html {
 
 /* Text */
 .bg-wrap__container {
-    padding: 80px;
+    padding: 175px 80px;
     display: flex;
     flex-direction: column;
 }
