--- a/assets/styles/blocks/header.css
+++ b/assets/styles/blocks/header.css
@@ -1,7 +1,9 @@
 .main-header {
   padding: 15px 0;
-
+  width: 100%;
   background: var(--main-color);
+  position: absolute;
+  z-index: 999999999;
 }
 
 .wrapper {
