--- a/assets/styles/blocks/hat.css
+++ b/assets/styles/blocks/hat.css
@@ -101,19 +101,7 @@ html {
 }
 
 .bg-wrap__buttons .apply:hover {
-    animation: apply-gradient 2s infinite;
-}
-
-@keyframes apply-gradient {
-    0% {
-        background-position: 100% 50%;
-    }
-    50% {
-        background-position: 0% 50%;
-    }
-    100% {
-        background-position: 100% 50%;
-    }
+    animation: button-gradient 2s infinite;
 }
 
 .bg-wrap__buttons .discover:hover {
