refactor: Fix the review issues

--- a/assets/styles/blocks/registration.css
+++ b/assets/styles/blocks/registration.css
@@ -41,7 +41,7 @@
     margin-bottom: 80px;
 }
 
-.registration__date .num {
+.registration__date .timer-digit {
     font-size: 70px;
     font-weight: 600;
 }
