--- a/assets/styles/blocks/consult.css
+++ b/assets/styles/blocks/consult.css
@@ -1,23 +1,23 @@
 @media screen and (max-width: 870px) {
-    .cons__bg {
+    .consultation__bg {
         padding: 50px;
     }
-    .cons .cons__title {
+    .consultation .consultation__title {
         font-size: 45px;
     }
-    .cons .cons__text {
+    .consultation .consultation__text {
         font-size: 20px;
     }
-    .cons .cons__form-container {
+    .consultation .consultation__form-container {
       flex-direction: column;  
     }
-    .cons .cons__form-input {
+    .consultation .consultation__form-input {
         margin: 0;
         margin-bottom: 10px;
     }
 }
 
-.cons__bg {
+.consultation__bg {
     width: 100%;
     height: 100%;
     background-color: var(--main-color);
@@ -30,23 +30,23 @@
     margin-bottom: 50px;
 }
 
-.cons__title {
+.consultation__title {
     font-size: 55px;
     font-weight: 700;
     margin-bottom: 30px;
 }
 
-.cons__text {
+.consultation__text {
     text-align: center;
     font-size: 26px;
     margin-bottom: 50px;
 }
 
-.cons__form-container {
+.consultation__form-container {
     display: flex;
 }
 
-.cons__form-input {
+.consultation__form-input {
     width: 500px;
     padding: 20px 10px;
     text-decoration: none;
@@ -55,7 +55,7 @@
     margin-right: 20px;
 }
 
-.cons__submit-button {
+.consultation__submit-button {
     cursor: pointer;
     border: none;
     background-image: var(--yellow-gradient);
@@ -67,6 +67,6 @@
     padding: 17px 30px;
 }
 
-.cons__submit-button:hover {
+.consultation__submit-button:hover {
     animation: button-gradient 2s infinite;
 }
