--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,6 +35,8 @@ a:hover {
   color: #ccc;
 }
 
+/* Button gradient animation */
+
 @keyframes button-gradient {
   0% {
       background-position: 100% 50%;
@@ -45,4 +47,28 @@ a:hover {
   100% {
       background-position: 100% 50%;
   }
+}
+
+/* Border animation */
+.animate-border {
+	animation: border 2s ease-in-out infinite;
+}
+
+@keyframes border {
+	0% {
+		border: 3px solid #ffd900;
+	}
+	25% {
+		border: 3px solid #ffc400;
+	}
+	75% {
+		border: 3px solid #fff3b0;
+	}
+	100% {
+		border: 3px solid #ffd900;
+	}
+}
+
+.db {
+  display: block;
 }
