--- a/assets/styles/blocks/consult.css
+++ b/assets/styles/blocks/consult.css
@@ -8,12 +8,20 @@
     .consultation .consultation__text {
         font-size: 20px;
     }
-    .consultation .consultation__form-container {
+    .consultation .consultation-form__inp-btn-wrap {
+      display: flex;
       flex-direction: column;  
     }
-    .consultation .consultation__form-input {
+    .consultation .consultation-form__input {
         margin: 0;
-        margin-bottom: 10px;
+        margin-bottom: 2px;
+    }
+    .consultation .consultation-form__submit {
+        width: 100%;
+        padding: 20px 0;
+    }
+    .consultation .consultation__bg {
+        padding-bottom: 250px;
     }
 }
 
@@ -25,8 +33,8 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    padding-top: 60px;
-    padding-bottom: 100px;
+    padding-top: 90px;
+    padding-bottom: 130px;
     margin-bottom: 50px;
 }
 
@@ -42,31 +50,60 @@
     margin-bottom: 50px;
 }
 
-.consultation__form-container {
-    display: flex;
+/* Form */
+
+/* Inputs */
+.consultation-form__inp-btn-wrap {
+	display: flex;
+	height: 58px;
 }
 
-.consultation__form-input {
-    width: 500px;
-    padding: 20px 10px;
-    text-decoration: none;
+.consultation-form__input {
+	text-decoration: none;
     outline: none;
-    border: 0 none;
-    margin-right: 20px;
+	width: 500px;
+    height: 58px;
+	padding-left: 20px;
+	margin-right: 20px;
+	transition: 0.3s ease-in;
+	animation-name: border;
+	border: 3px solid rgb(255, 255, 255);
 }
 
-.consultation__submit-button {
-    cursor: pointer;
+.consultation-form__input:hover {
+	border: 3px solid #ffd900;
+}
+
+/* Submit button */
+.consultation-form__submit {
+	cursor: pointer;
     border: none;
-    background-image: var(--yellow-gradient);
+	width: 100px;
+	background-image: var(--yellow-gradient);
     background-size: 400%;
     background-position: 100%;
-    font-size: 120%;
+	font-size: 120%;
     font-weight: bold;
-    letter-spacing: 0.5px;
-    padding: 17px 30px;
+    letter-spacing: 0.7px;
+	transition: 0.3s ease-in;
 }
 
-.consultation__submit-button:hover {
-    animation: button-gradient 2s infinite;
+.consultation-form__submit:hover {
+	animation: button-gradient 2s infinite;
+}
+
+/* Error fields */
+.consultation-form__errors-wrap {
+	display: flex;
+	height: 40px;
+	color: rgb(255, 196, 0);
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.consultation-form__error {
+	width: 300px;
+	height: 40px;
+	padding: 10px 6px 0px 20px;
+	margin-right: 20px;
+    color: rgb(255, 196, 0);
 }
